# vasil-eval

./: CHANGELOG.md  cabal.project  check-reference-inputs.plutus  random-number.json  ref-input.addr  vasil-eval.cabal
scripts/: mintTokenToAddress.sh  queryUtxos.sh  reverseNftToScript.sh  transferTokenToScript.sh  unlockTokenFromScript.sh  wallets-gen.sh
src/: RefInputsTest.hs
tx/: tx.raw  tx.signed
wallets/wallet1/: w1.hash  w1.skey  w1.vkey
